--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,36 @@
 {
-  "extends": "next/core-web-vitals",
-  "plugins": ["import", "react"],
-  "rules": {
-    "no-console": "error",
-    "import/prefer-default-export": "off"
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "extends": [   
+    "airbnb", 
+    "airbnb-typescript",
+    "airbnb/hooks",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "rules":{
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": 0,
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+   ],
+   "react/jsx-props-no-spreading": 0
+  },
+  "parserOptions": {
+    "project": "./tsconfig.json"
   }
 }
