--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint --fix './pages/*.{ts,tsx}'"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.3.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
