[feature/path] 절대 경로 지정 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@": ["./src"],
-      "@/*": ["./src/*"],
-      "@components": ["./src/components"]
+      "@src/*": [
+        "./*"
+      ]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
