--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^2.7.1",
     "react-redux": "^8.0.4",
     "redux-logger": "^3.0.6",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.3"
   }
 }
